# dlite

./: CMakeLists.txt  Pipfile  requirements_dev.txt  requirements_full.txt
.github/workflows/: cd_docs.yml  ci_cd_updated_master.yml  ci_dependabot.yml  ci_tests.yml  container_builds_weekly.yml  ssh_debug_windows.yml  ssh_debug_windows_vs.yml  ssh_degug_windows.yml  static_analysis.yml
bindings/fortran/: CMakeLists.txt
bindings/fortran/tests/: CMakeLists.txt
bindings/python/: CMakeLists.txt  dlite-python.i  dlite-storage-python.i
bindings/python/scripts/: CMakeLists.txt
bindings/python/tests/: CMakeLists.txt  test_storage.py
cmake/: Finddlite.cmake  MakePlatformPaths.cmake  dliteCodeGen.bat.in
examples/: CMakeLists.txt
examples/ex1/: CMakeLists.txt
examples/ex2/: CMakeLists.txt
examples/ex3/: CMakeLists.txt
examples/ex4/: CMakeLists.txt
examples/mappings/: requirements.txt
examples/read-csv/: readcsv.py
python/: pyproject.toml  setup.py
src/: CMakeLists.txt  config-paths.h.in
src/pyembed/: CMakeLists.txt  dlite-pyembed.c
src/tests/: CMakeLists.txt
src/tests/python/: CMakeLists.txt  test_pyembed.c
src/utils/: CMakeLists.txt  fileutils.c  fileutils.h
src/utils/compat-src/: getopt.h  setenv.c
src/utils/tests/: CMakeLists.txt  test_fileutils.c
storages/hdf5/: CMakeLists.txt
storages/json/: CMakeLists.txt
storages/json/tests/: CMakeLists.txt
storages/python/: CMakeLists.txt  dlite-plugins-python.c
storages/python/tests-c/: CMakeLists.txt
storages/python/tests-python/: CMakeLists.txt
storages/rdf/: CMakeLists.txt
storages/rdf/tests/: CMakeLists.txt
tools/: CMakeLists.txt  dlite-env.c
tools/tests/: CMakeLists.txt
